force-app/main/default/objects/vlocity_ins__OfferMigrationComponentMapping__c/fields/vlocity_ins__isActive__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__isActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This tells if any component mapping is active or inactive.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>