force-app/main/default/objects/vlocity_ins__OfferMigrationComponentMapping__c/fields/vlocity_ins__OfferMigrationPlanId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__OfferMigrationPlanId__c</fullName>
    <label>Offer Migration Plan</label>
    <referenceTo>vlocity_ins__OfferMigrationPlan__c</referenceTo>
    <relationshipLabel>Offer Migration Component Mappings</relationshipLabel>
    <relationshipName>OfferMigrationComponentMappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>