force-app/main/default/objects/vlocity_ins__OfferMigrationComponentMapping__c/fields/vlocity_ins__TargetProductId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__TargetProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>TargetProductId</relationshipName>
    <type>Lookup</type>
</CustomField>